--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,7 @@
         <th pSortableColumn="tt">Trạng thái</th>
         <th pSortableColumn="mnn">Mã Nguyên nhân</th>
         <th pSortableColumn="nn">Nguyên nhân</th>
+        <th pSortableColumn="nn">TT</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-product>
